<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1da1f2"
    android:onClick="rootLayoutTapped"
    tools:context=".SignUp">

    <Button
        android:id="@+id/btnSignUp"
        android:layout_width="310dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@drawable/active_button"
        android:onClick="signUpOnClicked"
        android:padding="20dp"
        android:text="@string/signup_btn"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edtSignUpPassword" />

    <EditText
        android:id="@+id/edtSignUpUsername"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:autofillHints="no"
        android:background="@drawable/edittext_design"
        android:hint="@string/enter_username"
        android:inputType="text"
        android:padding="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edtSignUpEmail" />

    <EditText
        android:id="@+id/edtSignUpPassword"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:autofillHints="no"
        android:background="@drawable/edittext_design"
        android:hint="@string/enter_password"
        android:inputType="textPassword"
        android:padding="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edtSignUpUsername" />

    <EditText
        android:id="@+id/edtSignUpEmail"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:autofillHints="no"
        android:background="@drawable/edittext_design"
        android:hint="@string/enter_email"
        android:inputType="textEmailAddress"
        android:padding="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imgTwitterLogo" />

    <ImageView
        android:id="@+id/imgTwitterLogo"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:layout_marginTop="50dp"
        android:contentDescription="@string/img_logo"
        android:src="@drawable/twitter_logo"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnSignUp">

        <TextView
            android:id="@+id/txtLoginLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_label"
            android:textColor="#fff"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/txtLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="@string/text_login"
            android:textColor="#14171A"
            android:textSize="15sp"
            android:onClick="loginOnClicked"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>